--- a/.asf.yaml
+++ b/.asf.yaml
@@ -36,6 +36,6 @@ github:
 
 notifications:
   commits: commits@maven.apache.org
-  issues: issues@maven.apache.org
+  #issues: issues@maven.apache.org
   pullrequests: issues@maven.apache.org
   jira_options: link label
