--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@ under the License.
   </parent>
 
   <artifactId>maven-clean-plugin</artifactId>
-  <version>3.5.0</version>
+  <version>3.5.1-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>Apache Maven Clean Plugin</name>
@@ -42,7 +42,7 @@ under the License.
   <scm>
     <connection>scm:git:https://gitbox.apache.org/repos/asf/maven-clean-plugin.git</connection>
     <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/maven-clean-plugin.git</developerConnection>
-    <tag>maven-clean-plugin-3.5.0</tag>
+    <tag>maven-clean-plugin-3.x</tag>
     <url>https://github.com/apache/maven-clean-plugin/tree/${project.scm.tag}</url>
   </scm>
   <issueManagement>
@@ -62,7 +62,7 @@ under the License.
 
   <properties>
     <mavenVersion>3.9.9</mavenVersion>
-    <project.build.outputTimestamp>2025-05-27T21:55:45Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-05-27T21:55:59Z</project.build.outputTimestamp>
   </properties>
 
   <dependencies>
