--- a/pom.xml
+++ b/pom.xml
@@ -61,12 +61,12 @@ under the License.
   </distributionManagement>
 
   <properties>
-    <mavenVersion>4.0.0-rc-3</mavenVersion>
+    <mavenVersion>4.0.0-rc-4</mavenVersion>
     <javaVersion>17</javaVersion>
     <guavaVersion>33.4.6-jre</guavaVersion>
     <guiceVersion>6.0.0</guiceVersion>
     <slf4jVersion>2.0.17</slf4jVersion>
-    <version.maven-invoker-plugin>3.7.0</version.maven-invoker-plugin>
+    <version.maven-invoker-plugin>3.9.1</version.maven-invoker-plugin>
     <version.maven-plugin-testing>4.0.0-beta-4</version.maven-plugin-testing>
     <version.maven-plugin-tools>4.0.0-beta-1</version.maven-plugin-tools>
     <version.maven-site-plugin>3.21.0</version.maven-site-plugin>
@@ -95,6 +95,12 @@ under the License.
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-api-annotations</artifactId>
+      <version>${mavenVersion}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-xml</artifactId>
       <version>${mavenVersion}</version>
       <scope>provided</scope>
     </dependency>
