--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@ under the License.
   <parent>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-plugins</artifactId>
-    <version>44</version>
+    <version>45</version>
     <relativePath />
   </parent>
 
@@ -62,6 +62,8 @@ under the License.
 
   <properties>
     <mavenVersion>3.9.11</mavenVersion>
+    <version.plexus-utils>3.6.0</version.plexus-utils>
+    <version.maven-invoker-plugin>3.9.1</version.maven-invoker-plugin>
     <project.build.outputTimestamp>2025-05-27T21:55:59Z</project.build.outputTimestamp>
   </properties>
 
