--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,12 @@ under the License.
       <version>4.11.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.32</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <profiles>
